style.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

html {
    background-color: #edeaf2;
    color: black;
    font-family: helvetica, sans-serif;
}

nav {
    display: flex;
    height: 6vh;
    width: 100vw;
    position: fixed;
    top: 0;
    flex-direction: row;
    justify-content: flex-end;
    align-items: center;
    background-color: #ddd3ee;  
}

nav a {
    color: black;
    text-decoration: none;
}

nav > div:first-child {
    margin-right: auto;
    margin-left: 25px;
    font-size: 28px;
    
  }

nav > div:last-child {
    margin-right: 25px;
  }

nav > div {
    font-size: 16px;
    margin: 15px;
    font-family: 'Inconsolata', monospace;
}

nav a:hover {
    color: purple;
}

section {
    /*border: 1px solid black;*/
    height: 95vh;
    display: flex;
    justify-content: center;
}

#about {
    height: 340vh;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
}

#contact {
    height: 100vh;
}

#intro {
display: flex;
flex-direction: column;
height: 100vh;
margin-top: 40px;
align-items: center;
justify-content: center;
}

h1 {
    font-size: 80px;
    font-family: 'Inconsolata', monospace;
}

p {
    font-size: 24px;
    margin-bottom: 14px;
    margin-top: 0px;
    text-align: center;
    font-family: 'Inconsolata', monospace;
}

.introp {
    margin-top: 24px;
}

.milena {
    margin: 0 450px 0 450px
    
}

.journey {
    margin-top: 24px;
}

img {
    margin-top: 20px;
}

.main {
    animation-name: rotate;
    animation-duration: 5s;
    animation-iteration-count: infinite;
}

@keyframes rotate {
    from{ transform: rotate(-360deg); }
    to{ transform: rotate(360deg);}
}

#footer {
height: 15vh;
display: flex;
flex-direction: column;
align-items: center;
justify-content: center;
background-color: #ddd3ee;
}

.rights, .email {
    font-size: 16px;
    font-family: helvetica, sans-serif;
}

#projects {
    display: flex;
    flex-direction: column;
    justify-content: center;
    height: 170vh;  
}

#SWE{
    display: flex;
    flex-direction: row;
    justify-content: center;  
}



#UXUI{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
}

/*@media screen (min-width: 1899px){
    body {
        display: flex;
        flex-direction: column;
    }
}*/

.UXUI {
    margin-top: 100px;
}

.btn {
    border-radius: 20px;      
}

.btn:hover {
    transform: scale(1.2);
    box-shadow: 0px 0px 30px 20px rgba(36, 36, 36, 0.08);
}

.p1 {  
    margin-left: 25px;     
}

.p4 {
    margin-right: 25px;
}

h2 {
    text-align: center;
    font-size: 50px;
    margin-bottom: 40px;
    font-family: 'Inconsolata', monospace;
}

h3 {
    text-align: center;
    margin-bottom: 25px;
    font-size: 25px; 
    font-family: 'Inconsolata', monospace;
}

/* Contact form */
#contact {
    height: 70vh;
    margin-bottom: 50px;
}

.banner {
    text-align: center;
    background-color: #ffffff;
    margin: 0 auto;
    margin-bottom: 30px;
    font-size: 19px;
}

/* Contact form styles */
.contact-form {
    padding: 40px 0;
    margin: 0 10px;
}
 
.form-container {
    max-width: 40%;
    margin: 0 auto;
    padding: 20px;
    background-color: #ffffff;
    border-radius: 10px;
    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
}
 
.contact-form h2 {
    text-align: center;
    margin-bottom: 20px;
}
 
.form-group {
    margin-bottom: 20px;
}
 
.form-container label {
    display:block;
    font-weight: bold;
}

.form-container input, textarea{
    width: 100%;
    padding: 10px;
    border: 1px solid #ccc;
    border-radius: 4px;
    margin-bottom: 1rem;
    resize: vertical;
}

.submit-button {
    padding: 10px 20px;
    background-color: black;
    border: none;
    color: white;
    border-radius: 4px;
    font-size: 1rem;
    cursor: pointer;
}

/* Modal */
#modal {
    display: none;
    background-color: rgba(0, 0, 0, 0.4);
    position: fixed;
	top: 0;
	left: 0;
	height: 100%;
	width: 100%;
	z-index: 1; 
	overflow: auto;
}

#modal-textbox {
	background-color: white;
	height: 350px;
	width: 550px;
	border-radius: 10px;
    margin: 150px auto;
    box-shadow: -2px 2px 2px rgba(0, 0, 0, 0.2);
    padding: 2%;
    line-height: 120%;
}

.modal-buttons {
    padding: 8px 16px;
    background-color: lightgray;
    border: none;
    outline: none;
    color: white;
    font-size: 24px;
	cursor: pointer;
    border-radius: 100%;
}

header {
    text-align: right;  
}

